--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 appdirs==1.4.3
 backcall==0.1.0
+git+git://github.com/casics/nostril
 coverage==4.5.3
 decorator==4.4.0
 docopt==0.6.2
-git+http://github.com/giganticode/dataprep
+git+git://github.com/giganticode/dataprep
 ipykernel==5.1.1
 ipython==7.5.0
 ipython-genutils==0.2.0
