--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,4 @@
-appdirs==1.4.3
-backcall==0.1.0
+giganticode-dataprep==1.0.0-alpha.6
 git+git://github.com/casics/nostril
-coverage==4.5.3
-decorator==4.4.0
-docopt==0.6.2
-git+git://github.com/giganticode/dataprep
-ipykernel==5.1.1
-ipython==7.5.0
-ipython-genutils==0.2.0
-jedi==0.13.3
-joblib==0.13.2
-jsons==0.8.9
-jupyter-client==5.2.4
-jupyter-core==4.4.0
-numpy==1.16.3
-pandas==0.24.2
-parso==0.4.0
-pexpect==4.7.0
-pickleshare==0.7.5
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-Pygments==2.4.0
-python-dateutil==2.8.0
-pytz==2019.1
-pyzmq==18.0.1
-regex==2019.4.14
-scikit-learn==0.21.1
 scipy==1.3.0
-six==1.12.0
-tornado==6.0.2
-tqdm==4.32.1
-traitlets==4.3.2
-wcwidth==0.1.7
+
