--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-giganticode-dataprep==1.0.0-alpha.6
+#giganticode-dataprep==1.0.0-alpha.6
+git+git://github.com/giganticode/dataprep
+git+git://github.com/casics/spiral
 git+git://github.com/casics/nostril
 scipy==1.3.0
 
